# bali

./: .gitignore  README.md  meson.build  meson_options.txt
docs/: Doxyfile.in  meson.build
subprojects/cli/: meson.build
subprojects/cli/src/: bali_cli.c
subprojects/parser/: meson.build
subprojects/parser/include/: bali_parser.h
subprojects/parser/src/: bali_parser.c
subprojects/parser/test/: bali_parser.test.c
subprojects/tokenizer/: meson.build
subprojects/tokenizer/include/: bali_tokenizer.h
subprojects/tokenizer/src/: bali_tokenizer.c
subprojects/tokenizer/test/: bali_tokenizer.test.c
subprojects/utilities/: meson.build
subprojects/utilities/include/: bali_utilities.h
subprojects/utilities/include/bali_utilities/: bump_arena.h
subprojects/utilities/src/bali_utilities/: bump_arena.c
subprojects/vm/: meson.build
subprojects/vm/include/: bali_vm.h
subprojects/vm/include/__bali_vm/: context.h  instruction.h  shard.h  value.h
subprojects/vm/src/: bali_vm.c
subprojects/vm/src/__bali_vm/: context.c  instruction.c  shard.c  value.c
subprojects/vm/test/: bali_vm.test.c
subprojects/vm/test/__bali_vm/: value.test.c
